[package]
name = "devil_daggers_survival"
version = "1.0.2"
authors = ["Mustafa Hashim <zee.mzha@gmail.com>"]
description = "A library to handle interacting with survival files from the game Devil Daggers"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = {version = "1.0", optional = true}

[features]
json_coding = ["serde_json", "serde"]